<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_mode_navigation"
    app:startDestination="@id/mappingMainFragment">

    <fragment
        android:id="@+id/mappingMainFragment"
        android:name="com.example.trackie.ui.mapmode.MappingMainFragment"
        android:label="fragment_mapping_main"
        tools:layout="@layout/fragment_mapping_main" />
    <fragment
        android:id="@+id/mappingCompleteFragment"
        android:name="com.example.trackie.ui.mapmode.MappingCompleteFragment"
        android:label="fragment_mapping_complete"
        tools:layout="@layout/fragment_mapping_complete" />
</navigation>