...
        android:layout_marginTop="26dp"
        android:layout_marginEnd="64dp"
        android:text="SET LOCATION"
        android:fontFamily="@font/opensans_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/map_mode_button"
        app:layout_constraintTop_toBottomOf="@id/home_current_location_textview"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/map_mode_button"
        android:layout_width="0dp"
...
