<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/locmenu_edit"
        android:orderInCategory="1"
        android:title="Edit"
        />
    <item
        android:id="@+id/locmenu_delete"
        android:orderInCategory="2"
        android:title="Delete"
       />
</menu>