<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/main_functions"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_map_24px"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_my_location_24px"
            android:title="@string/menu_locations" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24px"
            android:title="@string/menu_settings" />


    </group>
    <group
        android:id="@+id/test_functions"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_database"
            android:icon="@drawable/ic_baseline_cloud_24"
            android:title="Database"/>

        <item
            android:id="@+id/nav_test_rssi"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="RSSI Test"/>

    </group>
</menu>