...
        app:layout_constraintBottom_toBottomOf="@+id/location_name_textview"
        app:layout_constraintStart_toEndOf="@+id/location_name_textview"
        app:layout_constraintTop_toTopOf="@+id/location_name_textview"
        app:srcCompat="@drawable/ic_map_24px" />

    <ImageView
        android:id="@+id/location_options_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
...
